--- a/requirements.txt
+++ b/requirements.txt
@@ -60,6 +60,7 @@ isoduration==20.11.0
 jedi==0.19.1
 jina==2.2.0
 Jinja2==3.1.3
+joblib==1.4.2
 json5==0.9.25
 jsonpointer==2.4
 jsonschema==4.22.0
@@ -138,6 +139,7 @@ rich==13.7.1
 rpds-py==0.18.0
 rsa==4.9
 safetensors==0.4.3
+scikit-learn==1.6.0
 scipy==1.14.1
 Send2Trash==1.8.3
 six==1.16.0
@@ -150,6 +152,7 @@ streamlit==1.34.0
 sympy==1.12
 tenacity==8.2.3
 terminado==0.18.1
+threadpoolctl==3.5.0
 tinycss2==1.3.0
 tokenizers==0.19.1
 toml==0.10.2
