--- a/requirements.txt
+++ b/requirements.txt
@@ -104,6 +104,7 @@ pandas==2.2.2
 pandocfilters==1.5.1
 parso==0.8.4
 pathspec==0.12.1
+patsy==1.0.1
 pexpect==4.9.0
 pillow==10.3.0
 platformdirs==4.2.1
@@ -148,6 +149,7 @@ sniffio==1.3.1
 soupsieve==2.5
 stack-data==0.6.3
 starlette==0.14.2
+statsmodels==0.14.4
 streamlit==1.34.0
 sympy==1.12
 tenacity==8.2.3
