--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ biopython==1.83
 biothings-client==0.3.1
 bleach==6.1.0
 blinker==1.8.1
+branca==0.8.1
 cachetools==5.3.3
 certifi==2024.2.2
 cffi==1.16.0
@@ -39,9 +40,12 @@ fair-esm==2.0.0
 fastapi==0.67.0
 fastjsonschema==2.19.1
 filelock==3.14.0
+folium==0.19.3
 fonttools==4.51.0
 fqdn==1.5.1
 fsspec==2024.3.1
+geographiclib==2.0
+geopy==2.4.1
 gitdb==4.0.11
 GitPython==3.1.43
 google-auth==2.29.0
@@ -148,6 +152,7 @@ six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.5
+squarify==0.4.4
 stack-data==0.6.3
 starlette==0.14.2
 statsmodels==0.14.4
@@ -180,4 +185,6 @@ webencodings==0.5.1
 websocket-client==1.8.0
 websockets==12.0
 widgetsnbextension==4.0.10
+wordcloud==1.9.4
+xyzservices==2024.9.0
 yarl==1.6.3
