--- a/requirements.txt
+++ b/requirements.txt
@@ -112,6 +112,7 @@ patsy==1.0.1
 pexpect==4.9.0
 pillow==10.3.0
 platformdirs==4.2.1
+plotly==5.24.1
 pooch==1.8.1
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
