--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+autograd==1.7.0
+autograd-gamma==0.5.0
 branca==0.8.1
 certifi==2024.12.14
 charset-normalizer==3.4.1
@@ -6,13 +8,16 @@ cycler==0.12.1
 filelock==3.16.1
 folium==0.19.3
 fonttools==4.55.3
+formulaic==1.1.1
 fsspec==2024.12.0
 geographiclib==2.0
 geopy==2.4.1
 idna==3.10
+interface-meta==1.3.0
 Jinja2==3.1.5
 joblib==1.4.2
 kiwisolver==1.4.8
+lifelines==0.30.0
 MarkupSafe==3.0.2
 matplotlib==3.10.0
 mpmath==1.3.0
@@ -41,4 +46,5 @@ typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.3.0
 wordcloud==1.9.4
+wrapt==1.17.0
 xyzservices==2024.9.0
