--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+annotated-types==0.7.0
+anyio==4.7.0
 autograd==1.7.0
 autograd-gamma==0.5.0
 branca==0.8.1
@@ -5,6 +7,8 @@ certifi==2024.12.14
 charset-normalizer==3.4.1
 contourpy==1.3.1
 cycler==0.12.1
+distro==1.9.0
+exceptiongroup==1.2.2
 filelock==3.16.1
 folium==0.19.3
 fonttools==4.55.3
@@ -12,9 +16,13 @@ formulaic==1.1.1
 fsspec==2024.12.0
 geographiclib==2.0
 geopy==2.4.1
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
 interface-meta==1.3.0
 Jinja2==3.1.5
+jiter==0.8.2
 joblib==1.4.2
 kiwisolver==1.4.8
 lifelines==0.30.0
@@ -23,25 +31,31 @@ matplotlib==3.10.0
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.2.1
+openai==1.58.1
 packaging==24.2
 pandas==2.2.3
 patsy==1.0.1
 pillow==11.1.0
 plotly==5.24.1
+pydantic==2.10.4
+pydantic_core==2.27.2
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
 scikit-learn==1.6.0
 scipy==1.14.1
 seaborn==0.13.2
 six==1.17.0
+sniffio==1.3.1
 squarify==0.4.4
 statsmodels==0.14.4
 sympy==1.13.1
 tenacity==9.0.0
 threadpoolctl==3.5.0
 torch==2.5.1
+tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.3.0
